# ia-crm

./: .env.example  .env.prod.example  .gitignore  Caddyfile  LICENSE  MISSING_FEATURES.md  README.md  README_PROD.md  docker-compose.prod.yml  docker-compose.restart.yml  docker-compose.yml  tools_import_isavigne.py
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  database.py  demo_seed.py  main.py  models.py  schemas.py  tasks.py
docs/: PROD_RUNBOOK.md
etl/: README.md  __init__.py  config.py  demo.py  ingest_raw.py  ingest_runner.py  load_postgres_multi.py  main_multi.py  pyproject.toml  transform_sales.py
etl/samples/: demo_clients.csv  demo_products.csv  demo_sales.csv
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
scripts/: api_smoke.sh  api_smoke_auth.sh  backup.sh  backup_postgres.sh  bootstrap_vps_ubuntu.sh  compose_smoke.sh  deploy.sh  full_smoke.sh  get_token.sh  http_smoke.sh  restore.sh  restore_postgres.sh  run_pipeline.sh  ui_smoke.sh  weekly_etl.sh
spa/: Dockerfile  package-lock.json  package.json
spa/lib/: api.ts  (+4 more)
tests/: __init__.py  conftest.py  test_alias_ingestion.py  test_api_smoke.py  test_brevo.py  test_brevo_live.py  test_campaigns_flow.py  test_clients_products_patch_delete.py  test_data_contract.py  test_e2e_api.py  test_health.py  test_pipeline_runner.py  test_reco_pipeline.py  test_recommendation_engine.py  test_security.py
workflows/: ci.yml
(+115 files in other folders)
