[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ia-crm-etl"
version = "0.1.0"
description = "ETL pipeline for ia-crm"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.2",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest"]

